file storage properties fix2